# 21x2-sh

./: .gitignore  Makefile  README.md  meson.build
src/: .gitignore
src/alias/: alias.c  alias.h  dalias.c  dalias.h  daliasinterface.c
src/builtin/: a.out  alias.c  builtin.h  cd.c  echo.c  exit.c  export.c  unset.c
src/common/: Makefile  function.h  macro.h  tools.c
src/exectree/: execand.c  execbang.c  execcase.c  execcmd.c  execfor.c  execfunc.c  execif.c  execor.c  execpipe.c  execred.c  execsep.c  execsubshell.c  exectree.c  exectree.h  execwhile.c
src/functions/: dfunc.c  dfunc.h  dfuncinterface.c
src/parser/: dtoken.c  dtoken.h  extendedgetline.c  extendedgetline.h  lexer.c  parser.c  parser.h  token.h
src/shell/: shell.c  shell.h
src/tools/: myitoa.c  mystrdup.c  tools.h
src/tree/: Makefile  tree.h  tree_and.c  tree_bang.c  tree_case.c  tree_cmd.c  tree_for.c  tree_funcdec.c  tree_generic_destroy.c  tree_if.c  tree_or.c  tree_pipe.c  tree_print.c  tree_red.c  tree_sep.c  tree_sepand.c  tree_subshell.c  tree_while.c
src/variables/: dvar.c  dvar.h  dvarinterface.c  var.c  var.h
tests/: args.sh  big_tests.sh  my_tests.sh  test.sh
tests/piscine/: 80cols.sh  alphanum.sh  copy_save.sh  eat_r.sh  extchange.sh  find_ascii.sh  mini_tree.sh  mix_files.sh  seq.sh  test.sh  tower.sh
