project('42sh', 'c', version: '1')

add_project_arguments('-Wall', '-Wextra', '-pedantic', '-std=c99', language : 'c')

executable('42sh', [
'src/tree/tree_for.c',
'src/tree/tree_cmd.c',
'src/tree/tree_sepand.c',
'src/tree/tree_red.c',
'src/tree/tree_if.c',
'src/tree/tree_or.c',
'src/tree/tree_generic_destroy.c',
'src/tree/tree_while.c',
'src/tree/tree_subshell.c',
'src/tree/tree_bang.c',
'src/tree/tree_sep.c',
'src/tree/tree_and.c',
'src/tree/tree_case.c',
'src/tree/tree_funcdec.c',
'src/tree/tree_pipe.c',
'src/tree/tree_print.c',
'src/alias/alias.c',
'src/alias/daliasinterface.c',
'src/alias/dalias.c',
'src/variables/dvar.c',
'src/variables/var.c',
'src/variables/dvarinterface.c',
'src/builtin/alias.c',
'src/builtin/cd.c',
'src/builtin/exit.c',
'src/builtin/unset.c',
'src/builtin/echo.c',
'src/builtin/export.c',
'src/exectree/execif.c',
'src/exectree/execsep.c',
'src/exectree/exectree.c',
'src/exectree/execcase.c',
'src/exectree/execpipe.c',
'src/exectree/execbang.c',
'src/exectree/execor.c',
'src/exectree/execcmd.c',
'src/exectree/execred.c',
'src/exectree/execfunc.c',
'src/exectree/execwhile.c',
'src/exectree/execand.c',
'src/exectree/execsubshell.c',
'src/exectree/execfor.c',
'src/parser/dtoken.c',
'src/parser/parser.c',
'src/parser/extendedgetline.c',
'src/parser/lexer.c',
'src/common/tools.c',
'src/functions/dfuncinterface.c',
'src/functions/dfunc.c',
'src/shell/shell.c',
'src/tools/myitoa.c',
'src/tools/mystrdup.c',
],
    install : true)